DOItoBibTeXFetcher now supports also http URLs
Changes in DOI.java:
 * renamed getURL() to getURLAsASCIIString to be consistent with Java's URI class
 * new method getURI()